--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -9,6 +9,7 @@
 	<link rel="stylesheet" href="/css/style.css" >
 	<div class='main-content'>
 		{{>header}}
+		<p>This site was created by CJay ;) . It used data from mapbox.com and another site I can't remember at the moment.</p>
 		<img class='portrait' src="/img/me.png">
 	</div>
 
